--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start-front": "react-scripts start",
-    "start": "yarn build && yarn server-prod",
+    "start": "npm run build && npm run server-prod",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "server-dev": "nodemon server.js",
