--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "real-time-editor",
+  "name": "realtime-editor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "codemirror": "^5.65.2",
     "express": "^4.17.3",
@@ -18,7 +12,7 @@
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
@@ -26,12 +20,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start-front": "react-scripts start",
-    "start": "npm run build && npm run server-prod",
+    "start:front": "react-scripts start",
+    "start": "npm run build && npm run server:prod",
     "build": "react-scripts build",
+    "server:dev": "nodemon server.js",
+    "server:prod": "node server.js",
     "test": "react-scripts test",
-    "server-dev": "nodemon server.js",
-    "server-prod": "node server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
