--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "realtime-editor",
+  "name": "ilve-code-editor",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.5",
+    "npm" : "8.5.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
